# monocoque

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE.md  CONTRIBUTING.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  OPTIMIZATIONS_COMPLETE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE5_BLUEPRINT_ANALYSIS.md  PHASE5_IMPLEMENTATION_STATUS.md  PROGRESS_REPORT.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_PLAN.md  STATUS.md  analyze_benchmarks.sh  quick_bench.sh
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/integrations/: copilot-instructions.md  project-context.md
.github/workflows/: ci.yml  instr-bench.yml  interop.yml
docs/: ADR.md  COMPATIBILITY.md  COMPLETE.md  FINAL_STATUS.md  FUZZING.md  FUZZING_RESULTS.md  GETTING_STARTED.md  IDENTITY_ROUTING_OPTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_NEXT_STEPS.md  IMPLEMENTATION_STATUS.md  INPROC_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  INTEROP_TESTING.md  MIGRATION.md  MONGODB_STYLE_SOCKET_API.md  NEXT_STEPS_ANALYSIS.md  PERFORMANCE.md  PERFORMANCE_TUNING.md  POISONED_GUARD.md  POISONGUARD_AUDIT.md  POISON_GUARD_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  PROGRESS_REPORT.md  PROXY_ANALYSIS.md  PUBLISHING.md  README.md  RELIABILITY_AND_RESILIENCE.md  SECURITY_GUIDE.md  SOCKETBASE_AUDIT.md  STATUS.md  USER_GUIDE.md  ZAP_INTEGRATION_GUIDE.md  ZEROMQ_COMPATIBILITY_ROADMAP.md  migration-from-libzmq.md  performance.md  security.md  troubleshooting.md
docs/blueprints/: 00-overview.md  01-unsafe-boundary-and-allocator.md  02-phase0-io-and-split-pump.md  (+8 more)
examples/: api_demo.rs  handshake_test.rs  hello_dealer.rs  multi_pub_minimal.rs  pair_socket_complete.rs  pubsub_events.rs  router_dealer_basic.rs  router_worker_pool.rs
interop_tests/: README.md  run_all_tests.sh  simple_interop_test.py  test_interop.sh  test_libzmq_client.py  test_pub_sub_interop.py  test_req_rep_interop.py
monocoque/: BENCHMARKS.md  Cargo.toml  analyze_benchmarks.py  quick_bench.sh  run_benchmarks.sh
monocoque-core/: Cargo.toml
monocoque-core/src/: actor.rs  alloc.rs  backpressure.rs  buffer.rs  config.rs  endpoint.rs  error.rs  inproc.rs  io.rs  ipc.rs  lib.rs  message.rs  message_builder.rs  monitor.rs  options.rs  poison.rs  reconnect.rs  router.rs  rt.rs  socket_type.rs  subscription.rs  tcp.rs  timeout.rs
monocoque-core/src/pubsub/: hub.rs  index.rs  mod.rs
monocoque-core/src/rt/: compio.rs  mod.rs  smol.rs  tokio.rs
monocoque-core/tests/: message_builder_tests.rs  sleep_after_timeout_probe.rs  socket_options_tests.rs
monocoque-fuzz/: .gitignore  Cargo.toml  README.md
monocoque-fuzz/fuzz_targets/: fuzz_command.rs  fuzz_curve_handshake.rs  fuzz_decoder.rs  fuzz_frame_codec.rs  fuzz_greeting.rs  fuzz_security_plain.rs  fuzz_subscription_trie.rs  fuzz_zap_request.rs
monocoque-loom/: Cargo.toml
monocoque-loom/src/: lib.rs
monocoque-zmtp/: Cargo.toml  README.md  bench_results.txt
monocoque-zmtp/benches/: measure_latency.rs  simple_perf.rs
monocoque-zmtp/examples/: dealer_echo_test.rs  minimal_test.rs  pubsub.rs  request_reply.rs  socket_types.rs  zmq_baseline.rs
monocoque-zmtp/src/: adapters.rs  base.rs  codec.rs  command.rs  dealer.rs  greeting.rs  handshake.rs  inproc_stream.rs  integrated_actor.rs  lib.rs  multipart.rs  pair.rs  proxy.rs  publisher.rs  publisher_old_single.rs.bak  pull.rs  push.rs  rep.rs  req.rs  router.rs  session.rs  socket_trait.rs  stream.rs  stream_sink.rs  subscriber.rs  timeout.rs  utils.rs  xpub.rs  xsub.rs
monocoque-zmtp/src/mechanism/: mod.rs  null.rs
monocoque-zmtp/src/security/: curve.rs  mod.rs  plain.rs  protocol.rs  zap.rs  zap_client.rs  zap_handler.rs
monocoque-zmtp/tests/: curve_integration_test.rs  curve_tests.rs  hwm_stress_test.rs  integration_basic.rs  multi_peer_reliability.rs  pipeline_test.rs  plain_auth_tests.rs  plain_integration_test.rs  proxy_integration.rs  proxy_integration_test.rs  pubsub_options_test.rs  reconnection_integration.rs  socket_trait_tests.rs  stream_socket_test.rs  xpubsub_integration.rs
monocoque/benches/: allocation.rs  fanout_fanin.rs  instr_hotpath.rs  ipc_vs_tcp.rs  latency.rs  measure_latency.rs  multithreaded.rs  patterns.rs  performance.rs  pipelined_throughput.rs  simple_perf.rs  throughput.rs
monocoque/benches/interop/: libzmq_throughput.py
monocoque/examples/: api_demo.rs  authenticated_req_rep.rs  bench_changes.rs  curve_demo.rs  debug_handshake_timing.rs  debug_rep_server.rs  endpoint_parsing.rs  handshake_test.rs  hello_dealer.rs  hwm_enforcement_demo.rs  inproc_demo.rs  inproc_pair_demo.rs  interop_dealer_libzmq.rs  interop_pubsub_libzmq.rs  interop_rep_libzmq.rs  interop_req_libzmq.rs  interop_router_libzmq.rs  ipc_transport.rs  monitoring.rs  multi_pub_minimal.rs  multi_pub_test.rs  multi_sub_client.rs  multi_subscriber.rs  pair_socket_complete.rs  paranoid_pirate.rs  paranoid_pirate_proxy.rs  paranoid_pirate_simple.rs  pipeline_worker_pool.rs  plain_auth_demo.rs  poison_guard_demo.rs  protocol_namespaces.rs  proxy_broker.rs  proxy_steerable.rs  pubsub_events.rs  pubsub_events_new.rs  pubsub_multi.rs  pubsub_multi_compio.rs  reconnection_demo.rs  recv_into_zero_alloc.rs  rep_server.rs  (+16 more)
monocoque/src/: dev_tracing.rs  lib.rs
monocoque/src/zmq/: common.rs  dealer.rs  mod.rs  publisher.rs  pull.rs  pull_fanin.rs  push.rs  push_fanout.rs  rep.rs  req.rs  router.rs  subscriber.rs
monocoque/tests/: fanin_rss_bound.rs  hotpath_alloc.rs  interop_load_balance.rs  interop_pair.rs  interop_pubsub.rs  interop_push_pull.rs  interop_router.rs  pipeline_fanout_fanin.rs  recv_into.rs  req_state_machine.rs  smol_runtime.rs  socket_footprint_bound.rs  tokio_runtime.rs  zap_integration.rs
scripts/: bench_all.sh  run_bench_peer.sh  run_fuzzer.sh  run_interop_tests.sh
scripts/monocoque_bench_peer/: Cargo.toml
scripts/monocoque_bench_peer/src/: main.rs
tests/: interop_load_balance.rs  interop_pair.rs  interop_pubsub.rs  interop_router.rs
(+10 files in other folders)
