[workspace]
resolver = "2"
members = ["monocoque-core", "monocoque-zmtp", "monocoque"]
exclude = ["monocoque-fuzz"]
default-members = ["monocoque"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Matheus Santos <vorj.dux@gmail.com>"]
repository = "https://github.com/vorjdux/monocoque"
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies
bytes = "1.5"
compio = { version = "0.10", features = ["runtime", "macros", "time", "bytes"] }
flume = "0.11"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
hashbrown = "0.14"
smallvec = "1.13"

# Async utilities
async-lock = "3.3"
dashmap = "6.0"
once_cell = "1.19"
parking_lot = "0.12"

# Networking
socket2 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
crypto_box = { version = "0.9", features = ["salsa20"] }
sha2 = "0.10"
rand = "0.8"

# System utilities
num_cpus = "1.16"

# Testing
zmq = "0.10"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
portpicker = "0.1"
hex = "0.4"

[profile.dev]
debug = 2

[profile.release]
opt-level = 3
debug = 0
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[workspace.lints.clippy]
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
future_not_send = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
items_after_statements = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
return_self_not_must_use = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
