[workspace]
resolver = "2"
members = ["monocoque-core", "monocoque-zmtp", "monocoque"]
exclude = ["monocoque-fuzz", "monocoque-loom"]
default-members = ["monocoque"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Matheus Santos <vorj.dux@gmail.com>"]
repository = "https://github.com/vorjdux/monocoque"
rust-version = "1.85"

# Workspace-wide lint configuration.
#
# clippy::pedantic and clippy::nursery are enabled for every target (lib, tests,
# examples, benches) via `[lints] workspace = true` in each member. The group
# lints run at `warn` with priority -1 so the specific `allow`s below (default
# priority 0) win. The allow-set is the union of what the crates intentionally
# accept: casts that are provably bounded on the wire path, the thread-per-core
# `!Send` future model, builder-pattern ergonomics, and doc/style preferences.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Thread-per-core runtime: futures are intentionally not Send.
future_not_send = "allow"
let_underscore_future = "allow"
# Async fns kept async for signature consistency across backends / traits.
unused_async = "allow"
# Wire-protocol and metrics math: casts are bounded by construction.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Builder / API ergonomics.
return_self_not_must_use = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
struct_excessive_bools = "allow"
# Documentation policy (added incrementally; false positives are common).
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
doc_lazy_continuation = "allow"
missing_fields_in_debug = "allow"
# The ZMQ domain has inherently similar names (xpub/xsub, sndbuf/rcvbuf,
# req/rep), so this fires constantly as a false positive.
similar_names = "allow"
# Style preferences kept deliberately.
module_name_repetitions = "allow"
items_after_statements = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
question_mark = "allow"
needless_continue = "allow"
should_implement_trait = "allow"
option_if_let_else = "allow"
while_let_loop = "allow"
never_loop = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
# Core dependencies
# 1.11.1 is the security floor for RUSTSEC-2026-0007 (BytesMut::reserve overflow).
bytes = "1.11.1"
# The I/O traits and buffer types are split out into two lean crates that carry
# no runtime and no io_uring driver, so they compile under either backend. The
# full compio umbrella (net/runtime/time/macros/io_uring) is pulled in only by
# the `runtime-compio` feature. See each crate's [features].
compio-io = "0.10"
compio-buf = { version = "0.8", features = ["bytes"] }
compio = { version = "0.19", default-features = false, features = ["runtime", "macros", "time", "io-uring", "net"] }
# smol drives the same socket stack on a lightweight async-executor + async-io
# stack. Only the `runtime-smol` feature pulls it in. See each crate's [features].
smol = "2"
flume = "0.11"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
hashbrown = "0.14"
smallvec = "1.13"

# Async utilities
async-lock = "3.3"
dashmap = "6.0"
once_cell = "1.19"
parking_lot = "0.12"

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Logging
# release_max_level_info compiles out trace!/debug! callsites in release builds
# so the hot send/recv path pays no runtime level check for them.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
crypto_box = { version = "0.9", features = ["salsa20"] }
sha2 = "0.10"
rand = "0.8"
subtle = "2"
zeroize = "1"

# System utilities
num_cpus = "1.16"

# Testing
zmq = "0.10"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
# Exact pin: the CI-installed gungraun-runner binary must match this library
# version, and Cargo.lock is not tracked, so a caret range would silently drift
# to a newer release than the pinned runner and fail the bench. Keep this in sync
# with GUNGRAUN_VERSION in .github/workflows/instr-bench.yml.
gungraun = "=0.19.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
portpicker = "0.1"
hex = "0.4"

[profile.dev]
debug = 2

[profile.release]
opt-level = 3
debug = 0
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

# The bench profile inherits from release, whose `strip = "symbols"` / `debug = 0`
# would hide the symbols gungraun needs to locate benchmark entry points
# under callgrind (benches/instr_hotpath.rs). Restore them for bench builds only;
# this does not affect the release artifacts or the criterion wall-clock benches.
[profile.bench]
debug = true
strip = false
