[package]
name = "monocoque-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol-agnostic messaging kernel with io_uring-based I/O"
keywords = ["messaging", "io_uring", "async", "zeromq", "kernel"]
categories = ["network-programming", "asynchronous"]
homepage = "https://github.com/vorjdux/monocoque"
documentation = "https://docs.rs/monocoque-core"
readme = "../README.md"

[dependencies]
bytes.workspace = true
compio.workspace = true
flume.workspace = true
futures.workspace = true
async-trait.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
socket2 = "0.5"
thiserror.workspace = true
tracing = "0.1"
