[package]
name = "monocoque-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol-agnostic messaging kernel with io_uring-based I/O"
keywords = ["messaging", "io_uring", "async", "zeromq", "kernel"]
categories = ["network-programming", "asynchronous"]
homepage = "https://github.com/vorjdux/monocoque"
documentation = "https://docs.rs/monocoque-rs-core"
readme = "../README.md"

[lib]
name = "monocoque_core"

[lints]
workspace = true

[dependencies]
async-lock.workspace = true
bytes.workspace = true
compio.workspace = true
dashmap.workspace = true
flume.workspace = true
futures.workspace = true
async-trait.workspace = true
hashbrown.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
socket2.workspace = true
thiserror.workspace = true
tracing.workspace = true
