[package]
name = "monocoque-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
monocoque-zmtp = { path = "../monocoque-zmtp" }
monocoque-core = { path = "../monocoque-core" }
bytes = "1.5"
futures = "0.3"
compio = "0.13"

[[bin]]
name = "fuzz_decoder"
path = "fuzz_targets/fuzz_decoder.rs"
test = false
doc = false

[[bin]]
name = "fuzz_frame_codec"
path = "fuzz_targets/fuzz_frame_codec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_security_plain"
path = "fuzz_targets/fuzz_security_plain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_subscription_trie"
path = "fuzz_targets/fuzz_subscription_trie.rs"
test = false
doc = false

[profile.release]
debug = 1
