[package]
name = "monocoque-fuzz"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Matheus Santos <vorj.dux@gmail.com>"]
repository = "https://github.com/vorjdux/monocoque"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
monocoque-zmtp = { path = "../monocoque-zmtp", package = "monocoque-rs-zmtp" }
monocoque-core = { path = "../monocoque-core", package = "monocoque-rs-core" }
bytes = "1.11.1"
futures = "0.3"

[[bin]]
name = "fuzz_decoder"
path = "fuzz_targets/fuzz_decoder.rs"
test = false
doc = false

[[bin]]
name = "fuzz_frame_codec"
path = "fuzz_targets/fuzz_frame_codec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_security_plain"
path = "fuzz_targets/fuzz_security_plain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_subscription_trie"
path = "fuzz_targets/fuzz_subscription_trie.rs"
test = false
doc = false

[[bin]]
name = "fuzz_curve_handshake"
path = "fuzz_targets/fuzz_curve_handshake.rs"
test = false
doc = false

[profile.release]
debug = 1

[[bin]]
name = "fuzz_greeting"
path = "fuzz_targets/fuzz_greeting.rs"
test = false
doc = false

[[bin]]
name = "fuzz_command"
path = "fuzz_targets/fuzz_command.rs"
test = false
doc = false

[[bin]]
name = "fuzz_zap_request"
path = "fuzz_targets/fuzz_zap_request.rs"
test = false
doc = false
