[package]
name = "monocoque-rs-zmtp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Internal ZMTP 3.1 protocol implementation for Monocoque (use 'monocoque-rs' crate for public API)"
keywords = ["zmq", "zeromq", "zmtp", "messaging", "protocol"]
categories = ["network-programming"]
homepage = "https://github.com/vorjdux/monocoque"
documentation = "https://docs.rs/monocoque-rs"
readme = "../README.md"

[lib]
name = "monocoque_zmtp"

[lints]
workspace = true

[features]
default = ["runtime-compio"]
# Native io_uring through compio (see monocoque-rs-core for the rationale).
runtime-compio = ["dep:compio", "monocoque-core/runtime-compio"]
# Drive the same socket stack on tokio instead.
runtime-tokio = ["dep:tokio", "monocoque-core/runtime-tokio"]
# Drive the same socket stack on smol instead.
runtime-smol = ["dep:smol", "monocoque-core/runtime-smol"]

[dependencies]
bytes.workspace = true
thiserror.workspace = true
flume.workspace = true
futures.workspace = true
compio-io.workspace = true
compio-buf.workspace = true
compio = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
monocoque-core = { version = "0.3.0", path = "../monocoque-core", package = "monocoque-rs-core", default-features = false }
smallvec.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
socket2.workspace = true
parking_lot.workspace = true
num_cpus.workspace = true
async-trait.workspace = true

# Security / Cryptography
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
crypto_box.workspace = true
sha2.workspace = true
rand.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
zmq.workspace = true
tokio.workspace = true
