[package]
name = "monocoque"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance ZeroMQ-compatible messaging runtime built on io_uring"
homepage = "https://github.com/vorjdux/monocoque"
documentation = "https://docs.rs/monocoque"
readme = "../README.md"
keywords = ["zeromq", "zmq", "messaging", "io_uring", "async"]
categories = ["network-programming", "asynchronous"]

# Examples
[[example]]
name = "api_demo"
required-features = ["zmq"]

[[example]]
name = "handshake_test"
required-features = ["zmq"]

[[example]]
name = "hello_dealer"
required-features = ["zmq"]

[[bench]]
name = "throughput"
harness = false
required-features = ["zmq"]

[[bench]]
name = "latency"
harness = false
required-features = ["zmq"]

[[bench]]
name = "patterns"
harness = false
required-features = ["zmq"]

[[bench]]
name = "pipelined_throughput"
harness = false
required-features = ["zmq"]

[[bench]]
name = "ipc_vs_tcp"
harness = false
required-features = ["zmq"]

[[bench]]
name = "multithreaded"
harness = false
required-features = ["zmq"]

[[bench]]
name = "performance"
harness = false
required-features = ["zmq"]

[[bench]]
name = "measure_latency"
harness = false
required-features = ["zmq"]

[[bench]]
name = "simple_perf"
harness = false
required-features = ["zmq"]

[[example]]
name = "protocol_namespaces"
required-features = ["zmq"]

[[example]]
name = "pubsub_events"
required-features = ["zmq"]

[[example]]
name = "proxy_broker"
required-features = ["zmq"]

[[example]]
name = "proxy_steerable"
required-features = ["zmq"]

[[example]]
name = "pubsub_multi_compio"
required-features = ["zmq"]

[[example]]
name = "multi_pub_minimal"
required-features = ["zmq"]

[[example]]
name = "router_dealer_basic"
required-features = ["zmq"]

[[example]]
name = "router_worker_pool"
required-features = ["zmq"]

# Interoperability examples (manual verification)
[[example]]
name = "interop_dealer_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_router_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_pubsub_libzmq"
required-features = ["zmq"]

[[example]]
name = "xpub_subscription_logging"
required-features = ["zmq"]

[[example]]
name = "xsub_dynamic_subscription"
required-features = ["zmq"]

[[example]]
name = "xpub_xsub_broker"
required-features = ["zmq"]

[[example]]
name = "plain_auth_demo"
required-features = ["zmq"]

[[example]]
name = "curve_demo"
required-features = ["zmq"]

[[example]]
name = "authenticated_req_rep"
required-features = ["zmq"]

[[example]]
name = "debug_handshake_timing"
required-features = ["zmq"]

[[example]]
name = "debug_rep_server"
required-features = ["zmq"]

[[example]]
name = "endpoint_parsing"
required-features = ["zmq"]

[[example]]
name = "hwm_enforcement_demo"
required-features = ["zmq"]

[[example]]
name = "inproc_demo"
required-features = ["zmq"]

[[example]]
name = "inproc_pair_demo"
required-features = ["zmq"]

[[example]]
name = "interop_rep_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_req_libzmq"
required-features = ["zmq"]

[[example]]
name = "ipc_transport"
required-features = ["zmq"]

[[example]]
name = "monitoring"
required-features = ["zmq"]

[[example]]
name = "multi_pub_test"
required-features = ["zmq"]

[[example]]
name = "multi_sub_client"
required-features = ["zmq"]

[[example]]
name = "multi_subscriber"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate_proxy"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate_simple"
required-features = ["zmq"]

[[example]]
name = "poison_guard_demo"
required-features = ["zmq"]

[[example]]
name = "pubsub_events_new"
required-features = ["zmq"]

[[example]]
name = "reconnection_demo"
required-features = ["zmq"]

[[example]]
name = "rep_server"
required-features = ["zmq"]

[[example]]
name = "req_client"
required-features = ["zmq"]

[[example]]
name = "router_identity"
required-features = ["zmq"]

[[example]]
name = "simple_rep_server"
required-features = ["zmq"]

[[example]]
name = "simple_req_client"
required-features = ["zmq"]

[[example]]
name = "simple_req_rep"
required-features = ["zmq"]

[[example]]
name = "socket_introspection"
required-features = ["zmq"]

[[example]]
name = "socket_monitoring"
required-features = ["zmq"]

[[example]]
name = "stream_sink_adapters"
required-features = ["zmq"]

[[example]]
name = "tcp_and_ipc_demo"
required-features = ["zmq"]

[[example]]
name = "zap_server_demo"
required-features = ["zmq"]

# Integration tests with libzmq
[[test]]
name = "interop_load_balance"
required-features = ["zmq"]

[[test]]
name = "interop_pair"
required-features = ["zmq"]

[[test]]
name = "interop_pubsub"
required-features = ["zmq"]

[[test]]
name = "interop_router"
required-features = ["zmq"]

[[test]]
name = "interop_push_pull"
required-features = ["zmq"]

[dependencies]
# Internal implementation crates (not exposed)
monocoque-core = { version = "0.1.0", path = "../monocoque-core" }
monocoque-zmtp = { version = "0.1.0", path = "../monocoque-zmtp", optional = true }

# Re-export dependencies for user convenience
bytes.workspace = true
compio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
zmq.workspace = true
flume.workspace = true
futures.workspace = true
criterion.workspace = true
tokio.workspace = true
num_cpus.workspace = true
portpicker.workspace = true
hex.workspace = true
async-trait.workspace = true

[features]
default = []

# Protocol implementations (opt-in)
zmq = ["dep:monocoque-zmtp"]

# Future protocols
# mqtt = ["dep:monocoque-mqtt"]
# amqp = ["dep:monocoque-amqp"]
