[package]
name = "monocoque-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance ZeroMQ-compatible messaging runtime, io_uring by default with optional tokio and smol backends"
homepage = "https://github.com/vorjdux/monocoque"
documentation = "https://docs.rs/monocoque-rs"
readme = "../README.md"
keywords = ["zeromq", "zmq", "messaging", "io_uring", "async"]
categories = ["network-programming", "asynchronous"]

# docs.rs builds a crate with its default features only. The whole ZeroMQ API
# lives behind the opt-in `zmq` feature, so the default build renders an almost
# empty page. Build the docs with `zmq` (on top of the default runtime-compio
# backend) so the socket types show up.
[package.metadata.docs.rs]
features = ["zmq"]

[lib]
name = "monocoque"

# Examples
[[example]]
name = "api_demo"
required-features = ["zmq"]

[[example]]
name = "bench_changes"
required-features = ["zmq"]

[[example]]
name = "handshake_test"
required-features = ["zmq"]

[[example]]
name = "hello_dealer"
required-features = ["zmq"]

[[bench]]
name = "throughput"
harness = false
required-features = ["zmq"]

[[bench]]
name = "instr_hotpath"
harness = false
required-features = ["zmq"]

[[bench]]
name = "fanout_fanin"
harness = false
required-features = ["zmq"]

[[bench]]
name = "latency"
harness = false
required-features = ["zmq"]

[[bench]]
name = "patterns"
harness = false
required-features = ["zmq"]

[[bench]]
name = "pipelined_throughput"
harness = false
required-features = ["zmq"]

[[bench]]
name = "ipc_vs_tcp"
harness = false
required-features = ["zmq"]

[[bench]]
name = "multithreaded"
harness = false
required-features = ["zmq"]

[[bench]]
name = "performance"
harness = false
required-features = ["zmq"]

[[bench]]
name = "measure_latency"
harness = false
required-features = ["zmq"]

[[bench]]
name = "simple_perf"
harness = false
required-features = ["zmq"]

[[bench]]
name = "allocation"
harness = false

[[example]]
name = "runtime_backends"
required-features = ["zmq"]

[[example]]
name = "protocol_namespaces"
required-features = ["zmq"]

[[example]]
name = "pubsub_events"
required-features = ["zmq"]

[[example]]
name = "proxy_broker"
required-features = ["zmq"]

[[example]]
name = "proxy_steerable"
required-features = ["zmq"]

[[example]]
name = "pubsub_multi"
required-features = ["zmq"]

[[example]]
name = "multi_pub_minimal"
required-features = ["zmq"]

[[example]]
name = "router_dealer_basic"
required-features = ["zmq"]

[[example]]
name = "router_worker_pool"
required-features = ["zmq"]

[[example]]
name = "pipeline_worker_pool"
required-features = ["zmq"]

[[example]]
name = "recv_into_zero_alloc"
required-features = ["zmq"]

# Interoperability examples (manual verification)
[[example]]
name = "interop_dealer_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_router_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_pubsub_libzmq"
required-features = ["zmq"]

[[example]]
name = "xpub_subscription_logging"
required-features = ["zmq"]

[[example]]
name = "xsub_dynamic_subscription"
required-features = ["zmq"]

[[example]]
name = "xpub_xsub_broker"
required-features = ["zmq"]

[[example]]
name = "plain_auth_demo"
required-features = ["zmq"]

[[example]]
name = "curve_demo"
required-features = ["zmq"]

[[example]]
name = "authenticated_req_rep"
required-features = ["zmq"]

[[example]]
name = "debug_handshake_timing"
required-features = ["zmq"]

[[example]]
name = "debug_rep_server"
required-features = ["zmq"]

[[example]]
name = "endpoint_parsing"
required-features = ["zmq"]

[[example]]
name = "hwm_enforcement_demo"
required-features = ["zmq"]

[[example]]
name = "inproc_demo"
required-features = ["zmq"]

[[example]]
name = "inproc_pair_demo"
required-features = ["zmq"]

[[example]]
name = "interop_rep_libzmq"
required-features = ["zmq"]

[[example]]
name = "interop_req_libzmq"
required-features = ["zmq"]

[[example]]
name = "ipc_transport"
required-features = ["zmq"]

[[example]]
name = "monitoring"
required-features = ["zmq"]

[[example]]
name = "multi_pub_test"
required-features = ["zmq"]

[[example]]
name = "multi_sub_client"
required-features = ["zmq"]

[[example]]
name = "multi_subscriber"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate_proxy"
required-features = ["zmq"]

[[example]]
name = "paranoid_pirate_simple"
required-features = ["zmq"]

[[example]]
name = "poison_guard_demo"
required-features = ["zmq"]

[[example]]
name = "pubsub_events_new"
required-features = ["zmq"]

[[example]]
name = "reconnection_demo"
required-features = ["zmq"]

[[example]]
name = "rep_server"
required-features = ["zmq"]

[[example]]
name = "req_client"
required-features = ["zmq"]

[[example]]
name = "router_identity"
required-features = ["zmq"]

[[example]]
name = "simple_rep_server"
required-features = ["zmq"]

[[example]]
name = "simple_req_client"
required-features = ["zmq"]

[[example]]
name = "simple_req_rep"
required-features = ["zmq"]

[[example]]
name = "socket_introspection"
required-features = ["zmq"]

[[example]]
name = "socket_monitoring"
required-features = ["zmq"]

[[example]]
name = "stream_sink_adapters"
required-features = ["zmq"]

[[example]]
name = "tcp_and_ipc_demo"
required-features = ["zmq"]

[[example]]
name = "zap_server_demo"
required-features = ["zmq"]

# Integration tests with libzmq
[[test]]
name = "zap_integration"
required-features = ["zmq"]

[[test]]
name = "req_state_machine"
required-features = ["zmq"]

[[test]]
name = "interop_load_balance"
required-features = ["zmq"]

[[test]]
name = "interop_pair"
required-features = ["zmq"]

[[test]]
name = "interop_pubsub"
required-features = ["zmq"]

[[test]]
name = "interop_router"
required-features = ["zmq"]

[[test]]
name = "interop_push_pull"
required-features = ["zmq"]

[[test]]
name = "pipeline_fanout_fanin"
required-features = ["zmq"]

[[test]]
name = "recv_into"
required-features = ["zmq"]

[[test]]
name = "fanin_rss_bound"
required-features = ["zmq"]

[[test]]
name = "hotpath_alloc"
required-features = ["zmq"]

[[test]]
name = "socket_footprint_bound"
required-features = ["zmq"]

[lints]
workspace = true

[dependencies]
# Internal implementation crates (not exposed)
monocoque-core = { version = "0.3.0", path = "../monocoque-core", package = "monocoque-rs-core", default-features = false }
monocoque-zmtp = { version = "0.3.0", path = "../monocoque-zmtp", package = "monocoque-rs-zmtp", optional = true, default-features = false }

# Re-export dependencies for user convenience
bytes.workspace = true
compio-io.workspace = true
compio-buf.workspace = true
compio = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

# Used by the PushFanOut / PullFanIn pipeline helpers (zmq feature only)
flume = { workspace = true, optional = true }

[dev-dependencies]
zmq.workspace = true
futures.workspace = true
criterion.workspace = true
gungraun.workspace = true
tokio.workspace = true
num_cpus.workspace = true
portpicker.workspace = true
hex.workspace = true
async-trait.workspace = true

[features]
default = ["runtime-compio"]

# Runtime backend selection (exactly one). See monocoque-rs-core for details.
runtime-compio = [
    "dep:compio",
    "monocoque-core/runtime-compio",
    "monocoque-zmtp?/runtime-compio",
]
runtime-tokio = [
    "dep:tokio",
    "monocoque-core/runtime-tokio",
    "monocoque-zmtp?/runtime-tokio",
]
runtime-smol = [
    "dep:smol",
    "monocoque-core/runtime-smol",
    "monocoque-zmtp?/runtime-smol",
]

# Protocol implementations (opt-in)
zmq = ["dep:monocoque-zmtp", "dep:flume"]

# Future protocols
# mqtt = ["dep:monocoque-mqtt"]
# amqp = ["dep:monocoque-amqp"]
