[workspace]

[package]
name = "monocoque_bench_peer"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Two-process benchmark peer for the monocoque comparison suite"

[[bin]]
name = "monocoque_bench_peer"
path = "src/main.rs"

[dependencies]
bytes = "1.11"
compio = { version = "0.19", features = ["runtime", "macros", "time", "net"] }
libc = "0.2"
monocoque-rs = { path = "../../monocoque", features = ["zmq"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
